Resolves: tdf#100181 quickstart crashes immediately without Quickstarter

Change-Id: I0257651b3841dea596077cfacbf7d69a20b04252